--- a/src/sass/reset.sass
+++ b/src/sass/reset.sass
@@ -17,6 +17,8 @@ time, mark, audio, video
     margin: 0
     padding: 0
     vertical-align: baseline
+    color: inherit
+    text-decoration: none
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
