Interface of ResultMap

--- a/src/style-imports.sass
+++ b/src/style-imports.sass
@@ -2,4 +2,4 @@
 @import './sass/variables.sass';
 @import './sass/App.sass';
 @import './sass/HomePage.sass';
-
+@import './sass/ResultRestaurant.sass';
