--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -3,6 +3,7 @@ body, button
   font-family: Avenir
   font-size: 12px
   line-height: 16px
+  overflow: hidden
 
 h1,h2,h3,h4
   font-family: Agenda
@@ -11,3 +12,25 @@ h1
   font-size: 2.8rem
   line-height: 3rem
 
+.mapboxgl-map
+  top: 15%
+.desktop-hide
+  display: none
+  
+@media (min-width: 768px) 
+  .desktop-hide
+    display: block
+    position: absolute
+    z-index: 9999
+    width: 100%
+    height: 100vh
+    background-color: $colorBlue
+    text-align: center
+    .text
+      color: $colorPink
+      transform: translate(-50%, -50%)
+      top: 50%
+      left: 50%
+      position: absolute
+
+    
