--- a/src/sass/ResultRestaurant.sass
+++ b/src/sass/ResultRestaurant.sass
@@ -18,7 +18,7 @@
       display: flex
       justify-content: center
       padding-top: 1.5vh
-
+      display: none
       button
         background: rgba(252, 191, 183, 0.82)
         border: none
@@ -29,7 +29,6 @@
         color: $colorBlue
         cursor: pointer
         outline-style: none
-
         i
           margin-right: 0.5rem
 
@@ -54,8 +53,9 @@
         i
           margin-right: 0.2rem;
           color: $colorBlue
-
+          display: none
       &-action
+        display: none
         button
           position: relative
           z-index: 30
@@ -72,19 +72,39 @@
       position: absolute
       background-image: linear-gradient($colorBlue, #172F38)
       color: $colorPink
-      top: 5vh
+      transform: translateY(45vh) 
       bottom: 0
-      width: 83%
+      width: 100%
       height: 100%
       border-radius: 1rem 1rem 0 0
-      padding: 0 8.5vw
-
+      &-note
+        position: absolute
+        top: 20px
+        right: 20px
+      &-calling
+        position: absolute
+        bottom: 20px
+        z-index: 999
+        width: 100%
+        text-align: center
+        .button
+          padding: 10px 20px
+          border-radius: 50px
+          width: 100px
+          color: #334E58
+          background-color: #FCBFB7
+          margin: 0 auto
+          i
+            margin: 0 5px;
+      &-title
+        padding: 0 20px
       hr
         height: 1px
         border: none
         background: $colorPink
+        width: 90%
         opacity: 0.8
-        margin: 1.3rem 0
+        margin: 1.3rem auto
 
       &-expandToggle
         //background: white
@@ -97,21 +117,26 @@
         hr
           width: 10vw
           height: 2.5px
+          padding: 20px
           border-color: transparent
           background: $colorPink
           border-radius: 5rem
           margin-top: 1rem
+          padding: 0 20px
 
       &-addressAndDistance
         display: flex
         justify-content: space-between
         margin-bottom: 1rem
+        padding: 0 20px
 
         &-distance
           font-weight: bold
 
       &-price
         margin-bottom: 1rem
+        padding: 0 20px
+
 
         &-title
           font-weight: bold
@@ -119,6 +144,7 @@
 
       &-about
         margin-bottom: 1rem
+        padding: 0 20px
 
         &-title
           font-weight: bold
@@ -128,3 +154,4 @@
   &--map
     position: relative
     top: -15vh
+    
